# MinecraftConsoles

./: .gitignore  CMakeLists.txt  COMPILE.md  CONTRIBUTING.md  MinecraftConsoles-v18.sln  MinecraftConsoles.sln  README.md  build-start-dedicated-server.sh  docker-build-dedicated-server.sh  docker-compose.dedicated-server.ghcr.yml  docker-compose.dedicated-server.yml  start-dedicated-server.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: debug-nightly  debug-nightly.yml  docker-nightly.yml  nightly.yml
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractTexturePack.cpp  AbstractTexturePack.h  AchievementPopup.cpp  AchievementScreen.cpp  ArchiveFile.cpp  ArrowRenderer.cpp  BatRenderer.cpp  BlazeRenderer.cpp  BoatModel.cpp  BoatRenderer.cpp  BreakingItemParticle.cpp  BubbleParticle.cpp  BufferedImage.cpp  BufferedImage.h  ChatScreen.cpp  ChestRenderer.cpp  ChickenModel.cpp  Chunk.cpp  ClientConnection.cpp  ClientConnection.h  ClientConstants.cpp  ClientConstants.h  ClockTexture.cpp  CompassTexture.cpp  ConnectScreen.cpp  CreateWorldScreen.cpp  CreeperRenderer.cpp  CritParticle2.cpp  DLCTexturePack.cpp  DLCTexturePack.h  DeathScreen.cpp  DefaultRenderer.h  DefaultTexturePack.cpp  DefaultTexturePack.h  DerivedServerLevel.cpp  DirtyChunkSorter.h  DisconnectedScreen.cpp  DistanceChunkSorter.h  DragonBreathParticle.cpp  (+175 more)
Minecraft.Client/Common/: App_enums.h  App_structs.h  BuildVer.h  Console_Awards_enum.h  Console_Debug_enum.h  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h  PostProcesser.h
Minecraft.Client/Common/Audio/: SoundEngine.cpp  SoundEngine.h  SoundNames.cpp  stb_vorbis.h
Minecraft.Client/Common/Colours/: ColourTable.cpp  ColourTable.h
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCAudioFile.h  DLCCapeFile.h  DLCColourTableFile.cpp  DLCColourTableFile.h  DLCFile.h  DLCGameRulesFile.cpp  DLCGameRulesFile.h  DLCGameRulesHeader.cpp  DLCGameRulesHeader.h  DLCLocalisationFile.cpp  DLCLocalisationFile.h  DLCManager.cpp  DLCManager.h  DLCPack.cpp  DLCPack.h  DLCSkinFile.cpp  DLCSkinFile.h  DLCTextureFile.cpp  DLCTextureFile.h  DLCUIDataFile.cpp  DLCUIDataFile.h
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  AddItemRuleDefinition.cpp  ApplySchematicRuleDefinition.cpp  CollectItemRuleDefinition.cpp  CompleteAllRuleDefinition.cpp  CompoundGameRuleDefinition.cpp  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  GameRule.h  GameRuleDefinition.cpp  GameRuleDefinition.h  GameRuleManager.cpp  GameRuleManager.h  LevelGenerationOptions.cpp  LevelGenerationOptions.h  LevelRuleset.cpp  StartFeature.cpp  UpdatePlayerRuleDefinition.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardInterface.cpp  LeaderboardManager.cpp  SonyLeaderboardManager.cpp
Minecraft.Client/Common/Media/: SettingsGraphicsMenu1080.swf  SettingsGraphicsMenu480.swf  SettingsGraphicsMenu720.swf  SettingsGraphicsMenuVita.swf
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp
Minecraft.Client/Common/Tutorial/: ChangeStateConstraint.cpp  ChangeStateConstraint.h  ChoiceTask.cpp  CompleteUsingItemTask.cpp  ControllerTask.cpp  ControllerTask.h  CraftTask.cpp  CraftTask.h  (+24 more)
Minecraft.Client/Durango/: ApplicationView.cpp  Durango_App.cpp  Durango_App.h  Durango_Minecraft.cpp  Durango_UIController.cpp
Minecraft.Client/Orbis/: Orbis_App.cpp  Orbis_App.h  Orbis_Minecraft.cpp  Orbis_UIController.cpp  user_malloc.cpp  user_malloc_for_tls.cpp  user_new.cpp
Minecraft.Client/PS3/: PS3_App.cpp  PS3_App.h  PS3_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp  PSVita_UIController.cpp
Minecraft.Client/Windows64/: KeyboardMouseInput.cpp  PostProcesser.cpp  Windows64_App.cpp  Windows64_App.h  Windows64_Minecraft.cpp  Windows64_UIController.cpp  Windows64_UIController.h  Windows64_Xuid.h
Minecraft.Client/Windows64Media/: strings.h
Minecraft.Client/Xbox/: Xbox_App.cpp  Xbox_App.h  Xbox_Minecraft.cpp  Xbox_UIController.cpp  Xbox_UIController.h
Minecraft.Server/: Minecraft.Server.vcxproj  Minecraft.Server.vcxproj.filters  ServerLogManager.cpp  ServerLogManager.h  ServerLogger.cpp  ServerLogger.h  ServerProperties.cpp  ServerProperties.h  ServerShutdown.h  WorldManager.cpp  WorldManager.h
Minecraft.Server/Access/: Access.cpp  Access.h  BanManager.cpp  BanManager.h  WhitelistManager.cpp  WhitelistManager.h
Minecraft.Server/Common/: AccessStorageUtils.h  FileUtils.cpp  FileUtils.h  NetworkUtils.h  StringUtils.cpp  StringUtils.h
Minecraft.Server/Console/: ServerCli.cpp  ServerCli.h  ServerCliEngine.cpp  ServerCliEngine.h  ServerCliInput.cpp  ServerCliInput.h  ServerCliParser.cpp  ServerCliParser.h  ServerCliRegistry.cpp  ServerCliRegistry.h
Minecraft.Server/Windows64/: ServerMain.cpp  postbuild_server.ps1
Minecraft.Server/docs/: DEVELOPMENT.en.md  DEVELOPMENT.ja.md
Minecraft.World/: AABB.cpp  AbstractContainerMenu.cpp  AbstractContainerMenu.h  Achievement.cpp  Achievement.h  Achievements.cpp  AddEntityPacket.cpp  AddEntityPacket.h  AddExperienceOrbPacket.h  AddGlobalEntityPacket.h  AddMobPacket.cpp  AddMobPacket.h  AddPaintingPacket.h  AddPlayerPacket.cpp  AddPlayerPacket.h  AgableMob.cpp  Animal.cpp  AnimatePacket.h  AnvilMenu.cpp  AnvilTile.cpp  ArmorDyeRecipe.cpp  ArmorDyeRecipe.h  ArmorItem.cpp  ArmorSlot.cpp  ArrayWithLength.h  Arrow.cpp  AttributeModifier.cpp  AvoidPlayerGoal.cpp  AwardStatPacket.cpp  AwardStatPacket.h  BaseAttributeMap.cpp  BaseEntityTile.cpp  BaseMobSpawner.cpp  BasePressurePlateTile.cpp  BaseRailTile.cpp  BasicTree.cpp  BasicTypeContainers.cpp  Bat.cpp  BeachBiome.cpp  BeaconMenu.cpp  (+630 more)
Minecraft.World/x64headers/: extraX64.h
cmake/: ClientSources.cmake  CopyServerAssets.cmake
docker/dedicated-server/: Dockerfile  entrypoint.sh
include/lce_filesystem/: lce_filesystem.cpp  lce_filesystem.h
(+447 files in other folders)
